# main-examples/basic/basic-modelgen-and-no-controller/src/main/java/com/example/SampleService.java
@@ -8,7 +8,7 @@ import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 
-import com.example.custom.SampleCustomType;
+
 import com.example.model.Person;
 
 @Service
@@ -37,7 +37,6 @@ public class SampleService {
 		person.setLastName("L");
 		person.setRegistrationDate(LocalDate.of(2024, 1, 1));
 		person.setSomeTimeData(OffsetDateTime.of(2024, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)));
-		person.setSampleCustomTypeData(new SampleCustomType("hello"));
 		return person;
 	}
 
