# main-examples/basic/basic-modelgen-and-no-controller/src/main/java/com/example/custom/SampleCustomType.java
@@ -1,24 +1,0 @@
-package com.example.custom;
-
-public class SampleCustomType {
-	private String data;
-
-	public SampleCustomType(String data) {
-		super();
-		this.data = data;
-	}
-
-	public SampleCustomType() {
-		super();
-		// TODO Auto-generated constructor stub
-	}
-
-	public String getData() {
-		return data;
-	}
-
-	public void setData(String data) {
-		this.data = data;
-	}
-
-}
