# main-examples/basic/basic-modelgen-and-no-controller/src/main/java/com/example/validationextn/ValidatorExtension.java
@@ -4,7 +4,7 @@ import java.util.HashMap;
 
 import org.springframework.stereotype.Component;
 
-import com.example.custom.SampleCustomType;
+
 
 import io.github.xdamah.validatorextn.BaseValidatorExtension;
 import io.github.xdamah.validatorextn.IValidator;
@@ -18,25 +18,22 @@ import io.github.xdamah.validatorextn.XdamahCardValidator;
 @Component
 public class ValidatorExtension extends BaseValidatorExtension {
 
-	private static final String CREDIT_CARD_EXTN = "x-CreditCardNumber";
-	private static final String EMAIL_EXTN = "x-Email";
-
 	@Override
 	public void onInitRegisterCustomSchemas() {
-		registerCustomSchema(SampleCustomType.class.getSimpleName(), SampleCustomType.class.getName());
+		
+		
 	}
 
 	@Override
 	protected String[] watchedExtensions() {
-		return new String[] { CREDIT_CARD_EXTN, EMAIL_EXTN };
+		
+		return null;
 	}
 
 	@Override
 	protected HashMap<String, IValidator> mapValidators() {
-		HashMap<String, IValidator> hashMap = new HashMap<>();
-		hashMap.put(CREDIT_CARD_EXTN, new XdamahCardValidator());
-		hashMap.put(EMAIL_EXTN, new SimpleEmailValidator());
-		return hashMap;
+		
+		return null;
 	}
 
 }
